:bug: Apercu Pro font showing on mobile

--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -4,19 +4,24 @@ $warm-grey = #8c8c8c
 $blue = #1c69d4
 $white = #fefefe
 
-$font = 'ApercuPro'
-$opensans = 'Open Sans'
-$bold = 'Apercu Pro'
-
 @font-face
    font-family Apercu Pro
    font-style regular
-   src url(../fonts/ApercuPro.otf)
+   src url(../fonts/ApercuPro.ttf) format ("ttf")
+   url(../fonts/ApercuPro.otf) format ("otft")
+   url(../fonts/ApercuPro.woff) format ("woff")
 
 @font-face
    font-family Apercu Pro
    font-style bold
-   src url(../fonts/ApercuPro-Bold.ttf)
+   src url(../fonts/ApercuPro-Bold.ttf) format ("ttf")
+   url(../fonts/ApercuPro-Bold.otf) format ("otft")
+   url(../fonts/ApercuPro-Bold.woff) format ("woff")
+
+
+ $font = 'ApercuPro'
+ $opensans = 'Open Sans'
+ $bold = 'Apercu Pro'
 
 
 /***** Basic *****/
@@ -58,7 +63,7 @@ h2
 .surtitre
   font-size 1rem
   color $blue
-  font-family $bold
+  font-family $bold $opensans
 
 /***** Progressive ******/
 
@@ -84,7 +89,7 @@ h2
     width 100%
     height 15rem
     h1
-      font-family $font
+      font-family $font $opensans
       font-weight 300
       font-size 1.6rem
       opacity 1
